@@ -1,3 +1,13 @@
+2006-11-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Add a translatable message.
+	Fix dvb-type: FILE.
+	Add queues after tee.
+	* flumotion/component/dvb/dvbbin.py:
+	initial import of a DvbBin that does close interaction between
+	dvbsrc and flutsdemux.
+
 2006-11-06  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
